NFT MINT ADDED, CAN GET BALANCE, ADD TEST BALANCE, GET METADATA
